<resources>
    <string name="app_name">instagram</string>
    <string name="story7">Sanjay</string>
    <string name="story6">Manav</string>
    <string name="story3">Kashish</string>
    <string name="story4">Deepika</string>
    <string name="story1">Tuffy</string>
    <string name="story2">Our Trio</string>
    <string name="story5">Akash</string>
    <string name="story8">Rahul</string>
</resources>