<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">
<!--toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"


        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="10dp"
        app:contentInsetEnd="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/allura"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/heart"
                android:layout_marginEnd="10dp"
                android:background="@color/white"/>
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/send"
                android:background="@color/white"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
<!--stories-->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:scrollbars="none"
        android:id="@+id/story_container">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story8"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story8"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="12dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story7"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story7"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="12dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story6"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story6"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="12dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story5"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story5"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="12dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story4"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story4"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="12dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story3"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story3"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="12dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story2"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story2"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="12dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/story1"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#8BC34A"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story1"
                    android:textColor="@color/black"
                    android:layout_marginTop="1dp"/>
            </LinearLayout>
        </LinearLayout>


    </HorizontalScrollView>
<!--divider-->
    <View
        android:id="@+id/divider"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/story_container"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#4BE4E2E2"/>
<!--post-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_marginTop="2dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/story1"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#4CAF50"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Random text"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:textStyle="normal"
                    android:fontFamily="@font/acme"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    android:src="@drawable/more"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>